@@ -155,20 +155,28 @@ public class DataTypeServiceImpl implements DataTypeService {
 			d.setTypeName(dm.selectById(type).getName());
 			if (type == 5) {
 				EmergencyTeam et = etm.selectById(id);
-				d.setId(et.getId());
-				d.setName(et.getName());
+				if (et != null) {
+					d.setId(et.getId());
+					d.setName(et.getName());
+				}
 			} else if (type == 7) {
 				MedicalInstitution mi = mim.selectById(id);
-				d.setId(mi.getId());
-				d.setName(mi.getName());
+				if (mi != null) {
+					d.setId(mi.getId());
+					d.setName(mi.getName());
+				}
 			} else if (type == 9) {
 				Shelter s = sm.selectById(id);
-				d.setId(s.getId());
-				d.setName(s.getName());
+				if (s != null) {
+					d.setId(s.getId());
+					d.setName(s.getName());
+				}
 			} else if (type == 13) {
 				ReserveLibrary rl = rlm.selectById(id);
-				d.setId(rl.getId());
-				d.setName(rl.getName());
+				if (rl != null) {
+					d.setId(rl.getId());
+					d.setName(rl.getName());
+				}
 			} else {
 
 			}
@@ -203,30 +211,34 @@ public class DataTypeServiceImpl implements DataTypeService {
 			d.setTypeName(type==0?"通讯录":"指挥架构");
 			if (type == 0) {//通讯录
 				ContactsResult cr = cm.selectById(id);
-				d.setId(cr.getId());
-				d.setName(cr.getContactName());
-				List<ContactsResult> userList = new ArrayList<>();
-				userList.add(cr);
-				d.setUserList(userList);
-			} else {//指挥架构
-				PlanOrg org = pm.selectById(new Long(id).intValue());
-				d.setId(new Long(org.getId()));
-				d.setName(org.getName());
-				if (org.getType() == 1) {//职位
-					String userIds = org.getUserIds();
-					ContactsResult cr = cm.selectById(Long.valueOf(userIds));
+				if (cr != null) {
+					d.setId(cr.getId());
+					d.setName(cr.getContactName());
 					List<ContactsResult> userList = new ArrayList<>();
 					userList.add(cr);
 					d.setUserList(userList);
-				} else { //部门
-					String userIds = org.getUserIds();
-					if (!StringUtils.isEmpty(userIds)) {
-						Map<String, Object> paramMap = new HashMap<>();
-						paramMap.put("ids", Arrays.asList(userIds.split(",")));
-						List<ContactsResult> userList = cm.queryForIds(paramMap);
+				}
+			} else {//指挥架构
+				PlanOrg org = pm.selectById(new Long(id).intValue());
+				if (org != null) {
+					d.setId(new Long(org.getId()));
+					d.setName(org.getName());
+					if (org.getType() == 1) {//职位
+						String userIds = org.getUserIds();
+						ContactsResult cr = cm.selectById(Long.valueOf(userIds));
+						List<ContactsResult> userList = new ArrayList<>();
+						userList.add(cr);
 						d.setUserList(userList);
-					} else {
-						d.setUserList(new ArrayList<ContactsResult>());
+					} else { //部门
+						String userIds = org.getUserIds();
+						if (!StringUtils.isEmpty(userIds)) {
+							Map<String, Object> paramMap = new HashMap<>();
+							paramMap.put("ids", Arrays.asList(userIds.split(",")));
+							List<ContactsResult> userList = cm.queryForIds(paramMap);
+							d.setUserList(userList);
+						} else {
+							d.setUserList(new ArrayList<ContactsResult>());
+						}
 					}
 				}
 			}
@@ -248,68 +260,74 @@ public class DataTypeServiceImpl implements DataTypeService {
 			if (type == 0) {//通讯录
 				d.setTypeName("通讯录");
 				ContactsResult cr = cm.selectById(id);
-				d.setId(cr.getId());
-				d.setName(cr.getContactName());
-				d.setContent("");//职责
-				List<ContactsResult> userList = new ArrayList<>();
-				userList.add(cr);
-				d.setUserList(userList);
-			} else if (type == 1) {//指挥架构
-				d.setTypeName("指挥架构");
-				PlanOrg org = pm.selectById(new Long(id).intValue());
-				d.setId(new Long(org.getId()));
-				d.setName(org.getName());
-				d.setContent(org.getDuty());
-				if (org.getType() == 1) {//职位
-					String userIds = org.getUserIds();
-					ContactsResult cr = cm.selectById(Long.valueOf(userIds));
+				if (cr != null) {
+					d.setId(cr.getId());
+					d.setName(cr.getContactName());
+					d.setContent("");//职责
 					List<ContactsResult> userList = new ArrayList<>();
 					userList.add(cr);
 					d.setUserList(userList);
-				} else { //部门
-					String userIds = org.getUserIds();
-					if (!StringUtils.isEmpty(userIds)) {
-						Map<String, Object> paramMap = new HashMap<>();
-						paramMap.put("ids", Arrays.asList(userIds.split(",")));
-						List<ContactsResult> userList = cm.queryForIds(paramMap);
+				}
+			} else if (type == 1) {//指挥架构
+				d.setTypeName("指挥架构");
+				PlanOrg org = pm.selectById(new Long(id).intValue());
+				if (org != null) {
+					d.setId(new Long(org.getId()));
+					d.setName(org.getName());
+					d.setContent(org.getDuty());
+					if (org.getType() == 1) {//职位
+						String userIds = org.getUserIds();
+						ContactsResult cr = cm.selectById(Long.valueOf(userIds));
+						List<ContactsResult> userList = new ArrayList<>();
+						userList.add(cr);
 						d.setUserList(userList);
-					} else {
-						d.setUserList(new ArrayList<ContactsResult>());
+					} else { //部门
+						String userIds = org.getUserIds();
+						if (!StringUtils.isEmpty(userIds)) {
+							Map<String, Object> paramMap = new HashMap<>();
+							paramMap.put("ids", Arrays.asList(userIds.split(",")));
+							List<ContactsResult> userList = cm.queryForIds(paramMap);
+							d.setUserList(userList);
+						} else {
+							d.setUserList(new ArrayList<ContactsResult>());
+						}
 					}
 				}
 			} else { //预案组
 				d.setTypeName("预案组");
 				PlanGroup group = pgm.selectById(new Long(id).intValue());
-				d.setId(new Long(group.getId()));
-				d.setName(group.getName());
-				d.setContent(group.getDuty());
-				String json2 = group.getUserIds();
-				JSONArray arr2 = JSONArray.fromObject(json2);
-				List<ContactsResult> userList = new ArrayList<>();
-				for (Object obj2 : arr2) {
-					JSONObject js2 = (JSONObject) obj2;
-					int type2 = js2.getInt("type");
-					long id2 = js2.getLong("id");
-					if (type2 == 0) {//通讯录
-						ContactsResult cr = cm.selectById(id2);
-						userList.add(cr);
-					} else { //指挥架构
-						PlanOrg org = pm.selectById(new Long(id2).intValue());
-						if (org.getType() == 1) {//职位
-							String userIds = org.getUserIds();
-							ContactsResult cr = cm.selectById(Long.valueOf(userIds));
+				if (group != null) {
+					d.setId(new Long(group.getId()));
+					d.setName(group.getName());
+					d.setContent(group.getDuty());
+					String json2 = group.getUserIds();
+					JSONArray arr2 = JSONArray.fromObject(json2);
+					List<ContactsResult> userList = new ArrayList<>();
+					for (Object obj2 : arr2) {
+						JSONObject js2 = (JSONObject) obj2;
+						int type2 = js2.getInt("type");
+						long id2 = js2.getLong("id");
+						if (type2 == 0) {//通讯录
+							ContactsResult cr = cm.selectById(id2);
 							userList.add(cr);
-						} else {//部门
-							String userIds = org.getUserIds();
-							if (!StringUtils.isEmpty(userIds)) {
-								Map<String, Object> paramMap = new HashMap<>();
-								paramMap.put("ids", Arrays.asList(userIds.split(",")));
-								userList.addAll(cm.queryForIds(paramMap));
+						} else { //指挥架构
+							PlanOrg org = pm.selectById(new Long(id2).intValue());
+							if (org.getType() == 1) {//职位
+								String userIds = org.getUserIds();
+								ContactsResult cr = cm.selectById(Long.valueOf(userIds));
+								userList.add(cr);
+							} else {//部门
+								String userIds = org.getUserIds();
+								if (!StringUtils.isEmpty(userIds)) {
+									Map<String, Object> paramMap = new HashMap<>();
+									paramMap.put("ids", Arrays.asList(userIds.split(",")));
+									userList.addAll(cm.queryForIds(paramMap));
+								}
 							}
 						}
 					}
+					d.setUserList(userList);
 				}
-				d.setUserList(userList);
 			}
 			result.add(d);
 		}
